--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "prettier": "^2.0.5",
         "semantic-release": "^17.0.7"
     },
+    "peerDependencies": {
+        "rkallan-eslint-config": "^1.2.0"
+    },
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
