perf: package name
BREAKING CHANGE: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rkallan-eslint-config",
+    "name": "rkallan-eslint-config-react",
     "version": "1.0.0",
     "description": "Eslint Rules React",
     "keywords": [
