--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+**/node_modules
 /.pnp
 .pnp.js
 
 # testing
-coverage
+**/coverage
+**/__diff_output__
 
 # production
-build
+**/build
+**/dist
 
 # misc
 .DS_Store
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 *-debug.log*
 *-error.log*
 *.css
-
-.vscode
