--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-    "name": "rkallan-eslint-config-react",
-    "version": "4.0.0",
+    "name": "eslint-config-react-rkallan",
+    "version": "1.0.0",
     "description": "Eslint Rules React",
     "keywords": [
-        "style guide",
-        "lint",
+        "code standard",
         "es6",
-        "es2015",
-        "es2016",
-        "es2017",
-        "es2018",
-        "react",
-        "jsx"
+        "javascript lint",
+        "lint",
+        "style guide",
+        "react"
     ],
     "bugs": {
         "url": "https://github.com/rkallan/eslint-config-react/issues/new",
@@ -33,18 +30,38 @@
     "scripts": {
         "build": "babel src -d build",
         "build:npm": "babel src -d .",
-        "format": "prettier --write './**/*.{jsx,js,json,css,scss,mdx,md,svg}'"
+        "format": "prettier --write './**/*.js'",
+        "lint": "eslint . --fix"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.9.6",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-config-rkallan": "^1.0.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-mdx": "^1.7.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-react-hooks": "^4.0.4",
+        "husky": "^4.2.5",
+        "object.assign": "^4.1.0",
         "prettier": "^2.0.5",
+        "react": "^16.13.1",
         "rkallan-prettier-config": "^2.0.0",
         "semantic-release": "^17.0.7"
     },
     "peerDependencies": {
-        "rkallan-eslint-config": ">= 1.0.0"
+        "eslint": ">= 6.8.0",
+        "eslint-config-prettier": ">= 6.11.0",
+        "eslint-config-rkallan": ">= 1.0.0",
+        "eslint-plugin-jsx-a11y": ">= 6.2.3",
+        "eslint-plugin-mdx": ">= 1.7.0",
+        "eslint-plugin-prettier": ">= 3.1.3",
+        "eslint-plugin-react-hooks": ">= 4.0.4",
+        "object.assign": ">= 4.1.0",
+        "react": ">= 16.13.1"
     },
     "plugins": [
         "@semantic-release/commit-analyzer",
