fix: in index only rules from src

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "main": "index.js",
     "files": [
-        "*.js"
+        "src"
     ],
     "scripts": {
         "build": "babel src -d build",
