--- a/package.json
+++ b/package.json
@@ -29,41 +29,51 @@
         "!.*",
         "!*.config.*"
     ],
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
     "scripts": {
         "build": "babel src -d build",
         "build:npm": "babel src -d .",
+        "commit": "git-cz",
         "format": "prettier --write './**/*.js'",
-        "lint": "eslint . --fix"
+        "lint": "eslint . --fix",
+        "prepare": "husky install"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-config-rkallan": "^1.0.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-mdx": "^1.7.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react-hooks": "^4.0.4",
-        "husky": "^4.2.5",
-        "object.assign": "^4.1.0",
-        "prettier": "^2.0.5",
-        "react": "^16.13.1",
-        "rkallan-prettier-config": "^2.0.0",
-        "semantic-release": "^17.0.7"
+        "@babel/cli": "^7.15.7",
+        "@babel/core": "^7.15.5",
+        "@babel/preset-env": "^7.15.6",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-rkallan": "^2.0.1",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-mdx": "^1.0.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.26.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "husky": "^7.0.2",
+        "object.assign": "^4.1.2",
+        "prettier": "^2.4.1",
+        "react": "^17.0.2",
+        "rkallan-prettier-config": "^2.1.0",
+        "semantic-release": "^18.0.0"
     },
     "peerDependencies": {
-        "eslint": ">= 6.8.0",
-        "eslint-config-prettier": ">= 6.11.0",
-        "eslint-config-rkallan": ">= 1.0.0",
-        "eslint-plugin-jsx-a11y": ">= 6.2.3",
-        "eslint-plugin-mdx": ">= 1.7.0",
-        "eslint-plugin-prettier": ">= 3.1.3",
-        "eslint-plugin-react-hooks": ">= 4.0.4",
-        "object.assign": ">= 4.1.0",
-        "react": ">= 16.13.1"
+        "eslint": ">=7.32.0",
+        "eslint-config-prettier": ">=8.3.0",
+        "eslint-config-rkallan": ">=2.0.1",
+        "eslint-plugin-jsx-a11y": ">=6.4.1",
+        "eslint-plugin-mdx": ">=1.15.1",
+        "eslint-plugin-prettier": ">=4.0.0",
+        "eslint-plugin-react": ">=7.26.0",
+        "eslint-plugin-react-hooks": ">=4.2.0",
+        "object.assign": ">=4.1.2",
+        "react": ">=17.0.2"
     },
     "plugins": [
         "@semantic-release/commit-analyzer",
